--- a/css/styles.css
+++ b/css/styles.css
@@ -4089,6 +4089,7 @@ textarea.form-control-lg {
   padding: 0.25rem 0.75rem;
   font-size: 1.25rem;
   line-height: 1;
+  color:white;
   background-color: transparent;
   border: 1px solid transparent;
   border-radius: 0.25rem;
