--- a/css/styles.css
+++ b/css/styles.css
@@ -4090,7 +4090,7 @@ textarea.form-control-lg {
   font-size: 1.25rem;
   line-height: 1;
   color:white;
-  background-color: transparent;
+  background-color: grey;
   border: 1px solid transparent;
   border-radius: 0.25rem;
   transition: box-shadow 0.15s ease-in-out;
