--- a/css/styles.css
+++ b/css/styles.css
@@ -4091,7 +4091,7 @@ textarea.form-control-lg {
   line-height: 1;
   color:white;
   background-color: grey;
-  border: 1px solid transparent;
+  border: 1px solid black;
   border-radius: 0.25rem;
   transition: box-shadow 0.15s ease-in-out;
 }
